@@ -1,0 +1,5 @@
+Name: TestPackage
+Bug-Database: https://github.com/example/foo/issues
+Bug-Submit: https://github.com/example/foo/issues/new
+Repository: https://github.com/example/blah.git
+Repository-Browse: https://github.com/example/blah
